--- a/requirements.txt
+++ b/requirements.txt
@@ -24,3 +24,31 @@ python-monkey-business==1.0.0
 setuptools==69.5.1
 six==1.16.0
 sqlparse==0.4.4
+asgiref==3.8.1
+autopep8==2.1.0
+Django==5.0.4
+django-nested-admin==4.0.2
+django-silk==5.1.0
+djangorestframework==3.15.1
+gprof2dot==2022.7.29
+Markdown==3.6
+psycopg2-binary==2.9.9
+pycodestyle==2.11.1
+python-monkey-business==1.0.0
+setuptools==69.5.1
+six==1.16.0
+sqlparse==0.4.4
+asgiref==3.8.1
+autopep8==2.1.0
+Django==5.0.4
+django-nested-admin==4.0.2
+django-silk==5.1.0
+djangorestframework==3.15.1
+gprof2dot==2022.7.29
+Markdown==3.6
+psycopg2-binary==2.9.9
+pycodestyle==2.11.1
+python-monkey-business==1.0.0
+setuptools==69.5.1
+six==1.16.0
+sqlparse==0.4.4
